--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Re-dux Boilerplate</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+    <style>
+      body{
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root">
