included sass and material ui

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <title>Re-dux Boilerplate</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-    <style>
-      body{
-        font-family: 'Roboto', sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="/static/bundle.css" />
   </head>
   <body>
     <div id="root">
